--- a/public/groups.html
+++ b/public/groups.html
@@ -347,7 +347,7 @@
         }
 
         function initializePusher() {
-            pusher = new Pusher('your_key_here', { // Replace with your actual Pusher key
+            pusher = new Pusher('9971b0ddd233ce6a53b6', { // Replace with your actual Pusher key
                 cluster: 'ap1' // Replace with your actual cluster
             });
 
